# PARMA-CC

./: COPYRIGHT  barrier.h
PARMA_flat/: CombineTask.h  FlatPARMA.cc  FlatPARMA.h  FlexiFlatPARMA.cc  FlexiFlatPARMA.h  PARMA.cc  PARMA.h  SimplePARMA.cc  ThreadArguments.h
PARMA_hierarchical/: FlexiAgileHierarchicalPARMA.cc  FlexiAgileHierarchicalPARMA.h  FlexiXHierarchicalPARMA.cc  FlexiXHierarchicalPARMA.h  HierarchicalPARMA.cc  HierarchicalPARMA.h  PARMA.cc  PARMA.h  SimplePARMA.cc  SimplePARMA.h  ThreadArguments.h
clustering_lib/: clusterer.cc  clusterer.h
core_lib/: Ellipsoid.cc  Ellipsoid.h  Object.h  ParmaConcurrentEllipsoid.cc  ParmaConcurrentEllipsoid.h  ParmaConcurrentMap.cc  ParmaConcurrentMap.h  ParmaEllipsoid.cc  ParmaEllipsoid.h  ParmaMap.cc  ParmaMap.h  ParmaObject.cc  ParmaObject.h  combine_and_linkage_stats.h  delimitingBox.cc  delimitingBox.h  idxXYZ.cc  idxXYZ.h  map.cc  map.h
datasets/ford/: 11  3  4  5  6  7  8  9
datasets/kitti/: scan1000  scan1001  scan1002  scan1003  scan1004  scan1005  scan1006  scan1007  scan1008  scan1009  scan1010  scan1011  scan1012  scan1013  scan1014  scan1015  scan1016  scan1017  scan1018  scan1019  scan1020  scan1021  scan1022  scan1023  scan1024  scan1025  scan1026  scan1027  scan1028  scan1029  scan1030  scan1031  scan1032  scan1033  scan1034  scan1035  (+8 more)
executables/FlexiFlatPARMA/: CMakeLists.txt  main.cc
globals/: globals.cc  globals.h
visualization/: compareTwoEllipsoids.m  plot_gaussian_ellipsoid.m  visualizeClusteredData.m  visualizeDataSplits.m  visualizeMap.m  visualizeMaps.m  visualizePtCloud.m
(+26 files in other folders)
